# cringelang

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: cli.rs  grammar.gram  interpreter.rs  lexer.rs  main.rs  number.rs  parser.rs  script.cringe
src/parse/: grammar.gram  interpreter.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
src/stdlib/: bool.rs  mod.rs  number.rs  object.rs  ops.rs
