[package]
name = "cringelang"
version = "0.1.0"
authors = ["Zohnannor <zohnannor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
chrono = "0.4"
colored = "2"
regex = "1.4.6"

[features]
debug = []
